--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
         <ul>
             <li>
-                <a href="">Home</a>
+                <a href="index.html">Home</a>
             </li>
             
             <li>
